--- a/public/login.html
+++ b/public/login.html
@@ -4,26 +4,150 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Login</title>
+
   <style>
-    body{font-family:Arial;margin:40px;max-width:420px}
-    input,button{width:100%;padding:12px;margin:8px 0;font-size:16px}
-    .err{color:#b00020;margin-top:10px}
+    :root{
+      --bg: #0b1220;
+      --panel: rgba(255,255,255,.06);
+      --border: rgba(255,255,255,.12);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.62);
+      --brand: #5aa7ff;
+      --brand2: #7c5cff;
+      --danger: #ff5d5d;
+      --shadow: 0 18px 55px rgba(0,0,0,.50);
+      --radius: 20px;
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      font-family: Arial, system-ui, -apple-system, "Segoe UI", Tahoma, sans-serif;
+      display:grid;
+      place-items:center;
+      padding:24px;
+      background:
+        radial-gradient(900px 500px at 15% 0%, rgba(90,167,255,.22), transparent 55%),
+        radial-gradient(900px 500px at 85% -10%, rgba(124,92,255,.22), transparent 60%),
+        linear-gradient(180deg, #08101f 0%, #070b14 100%);
+      color: var(--text);
+    }
+
+    .box{
+      width: min(440px, 100%);
+      background: linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.04));
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:18px;
+      backdrop-filter: blur(8px);
+    }
+
+    .head{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      margin-bottom:14px;
+    }
+
+    h2{ margin:0; font-size:20px; letter-spacing:.2px; }
+
+    .tag{
+      font-size:12px;
+      padding:6px 10px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,.12);
+      background: rgba(255,255,255,.03);
+      color: var(--muted);
+    }
+
+    label{
+      display:block;
+      margin:10px 0 6px;
+      font-size:12px;
+      color: var(--muted);
+    }
+
+    input{
+      width:100%;
+      padding:12px 12px;
+      font-size:15px;
+      color: var(--text);
+      background: rgba(0,0,0,.25);
+      border: 1px solid rgba(255,255,255,.12);
+      border-radius: 14px;
+      outline:none;
+      transition:.15s ease;
+    }
+    input::placeholder{ color: rgba(255,255,255,.45); }
+    input:focus{
+      border-color: rgba(90,167,255,.55);
+      box-shadow: 0 0 0 3px rgba(90,167,255,.18);
+    }
+
+    button{
+      width:100%;
+      margin-top:14px;
+      padding:12px 14px;
+      border:none;
+      border-radius:14px;
+      cursor:pointer;
+      font-size:15px;
+      color: rgba(255,255,255,.92);
+      background: linear-gradient(135deg, rgba(90,167,255,.92), rgba(124,92,255,.92));
+      box-shadow: 0 12px 30px rgba(90,167,255,.16);
+      transition: transform .12s ease, filter .12s ease, opacity .12s ease;
+    }
+    button:hover{ transform: translateY(-1px); filter: brightness(1.05); }
+    button:active{ transform: translateY(0); opacity:.92; }
+
+    .err{
+      margin-top:12px;
+      padding:10px 12px;
+      border-radius:14px;
+      border:1px solid rgba(255,93,93,.35);
+      background: rgba(255,93,93,.12);
+      color: rgba(255,255,255,.92);
+      display:none;
+    }
+    .muted{
+      margin-top:12px;
+      font-size:12px;
+      color: var(--muted);
+      line-height:1.5;
+    }
   </style>
 </head>
+
 <body>
-  <h2>تسجيل الدخول</h2>
+  <div class="box">
+    <div class="head">
+      <h2>تسجيل الدخول</h2>
+      <span class="tag">Dark ثابت</span>
+    </div>
 
-  <input id="username" placeholder="Username" />
-  <input id="password" type="password" placeholder="Password" />
-  <button id="btn">دخول</button>
+    <label for="username">Username</label>
+    <input id="username" placeholder="Username" />
 
-  <div id="err" class="err"></div>
+    <label for="password">Password</label>
+    <input id="password" type="password" placeholder="Password" />
+
+    <button id="btn">دخول</button>
+
+    <div id="err" class="err"></div>
+
+    <div class="muted">لو حصل خطأ، هتظهر الرسالة هنا بشكل واضح.</div>
+  </div>
 
   <script>
     document.getElementById("btn").onclick = async () => {
       const username = document.getElementById("username").value.trim();
       const password = document.getElementById("password").value.trim();
-      document.getElementById("err").textContent = "";
+      const errEl = document.getElementById("err");
+      errEl.style.display = "none";
+      errEl.textContent = "";
 
       const resp = await fetch("/api/auth/login", {
         method: "POST",
@@ -37,7 +161,8 @@
         localStorage.setItem("jwt", data.token);
         location.href = "/dashboard";
       } else {
-        document.getElementById("err").textContent = data.error || "فشل تسجيل الدخول";
+        errEl.textContent = data.error || "فشل تسجيل الدخول";
+        errEl.style.display = "block";
       }
     };
   </script>
